--- a/phpldapadmin/Dockerfile
+++ b/phpldapadmin/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.8
-RUN apk add --update --no-cache phpldapadmin php5-apache2 && \
+RUN apk add --update --no-cache phpldapadmin php5-apache2 php5-openssl && \
     ln -sf /dev/stdout /var/log/apache2/access.log && \
     ln -sf /dev/stderr /var/log/apache2/error.log && \
     mkdir -p /run/apache2/
