Various improvements to slapd.
- Allow setting a debug level environment variable.
- Expose port 636 (ldaps).
- Install newer version of slapd from Debian backports.
- Cleaned up the entrypoint script.

--- a/slapd/Dockerfile
+++ b/slapd/Dockerfile
@@ -1,5 +1,6 @@
 FROM debian:stretch-slim
-RUN apt-get update && \
+RUN echo 'deb http://deb.debian.org/debian stretch-backports main' > /etc/apt/sources.list.d/backports.list && \
+    apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         gnutls-bin \
         ldap-utils \
@@ -8,9 +9,10 @@ RUN apt-get update && \
     mkdir -p /run/slapd && \
     rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* /var/cache/apt/archives/*
 COPY entrypoint /
-EXPOSE 389
+EXPOSE 389 636
 VOLUME [ "/var/lib/ldap" ]
-ENV LDAP_URLS="ldap:/// ldapi:/// ldaps:///"
+ENV LDAP_URLS="ldap:/// ldapi:/// ldaps:///" \
+    SLAPD_DEBUG_LEVEL="NONE"
 ENTRYPOINT [ "/entrypoint" ]
-CMD [ "slapd", "-F", "/etc/ldap/slapd.d", "-u", "openldap", "-g", "openldap", "-h", "\"$LDAP_URLS\"", "-d", "NONE" ]
+CMD [ "slapd", "-F", "/etc/ldap/slapd.d", "-u", "openldap", "-g", "openldap", "-h", "\"$LDAP_URLS\"", "-d", "$SLAPD_DEBUG_LEVEL" ]
 HEALTHCHECK CMD ldapsearch -b cn=config -H ldapi:/// > /dev/null || exit 1
