--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,23 @@
 ---
 version: '3.5'
 services:
-  slapd:
+  ldap:
     build:
       context: slapd/
     volumes:
       - _run_ldap:/run/slapd
       - ldap:/var/lib/ldap
     environment:
-      LDAP_ROOTPASS: foo
-      LDAP_DOMAIN: nowhere.com
-      LDAP_ORGANIZATION: none
+      LDAP_ROOTPASS: "${LDAP_ROOTPASS:-foo}"
+      LDAP_DOMAIN: "${LDAP_DOMAIN:-nowhere.com}"
+      LDAP_ORGANIZATION: "${LDAP_ORGANIZATION:-none}"
 
   nss-pam-ldapd:
     build:
       context: nss-pam-ldapd/
     command: /usr/sbin/nslcd --debug --nofork
     environment:
-      LDAP_BASE_DN: 'dc=nowhere,dc=com'
+      LDAP_BASE_DN: "${LDAP_BASE_DN:-dc=nowhere,dc=com}"
     volumes:
       - _run_ldap:/run/slapd
 
@@ -26,7 +26,7 @@ services:
     build:
       context: ldap-account-manager/
     links:
-      - slapd
+      - ldap
     volumes:
       - _run_ldap:/run/slapd
       - ldap-account-manager:/var/lib/ldap-account-manager
