nss-pam-ldapd image update.
- Update base image to Debian Buster.
- Install pamtester in the image.

--- a/nss-pam-ldapd/Dockerfile
+++ b/nss-pam-ldapd/Dockerfile
@@ -1,10 +1,12 @@
-FROM debian:stretch-slim
+FROM debian:buster-slim
+# hadolint ignore=DL3008
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-        ca-certificates=20161130+nmu1+deb9u1 \
-        gosu=1.10-1+b2 \
-        libnss-ldapd=0.9.7-2+deb9u1 \
-        libpam-ldapd=0.9.7-2+deb9u1 \
+        ca-certificates \
+        gosu \
+        libnss-ldapd \
+        libpam-ldapd \
+        pamtester \
     && \
     mkdir -p /run/nslcd && \
     chown -R nslcd:nslcd /run/nslcd/ && \
