--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       context: slapd/
     domainname: "${LDAP_HOSTNAME:-ldap}.${LDAP_DOMAIN:-nowhere.com}"
     environment:
-      LDAP_ROOTPASS: "${LDAP_ROOTPASS:-foo}"
+      LDAP_ROOTPASS: &password "${LDAP_ROOTPASS:-foo}"
       LDAP_DOMAIN: "${LDAP_DOMAIN:-nowhere.com}"
       LDAP_ORGANIZATION: "${LDAP_ORGANIZATION:-none}"
     hostname: "${LDAP_HOSTNAME:-ldap}"
@@ -27,7 +27,7 @@ services:
     depends_on:
       - ldap
     environment:
-      LDAP_BASE_DN: "${LDAP_BASE_DN:-dc=nowhere,dc=com}"
+      LDAP_BASE_DN: &base_dn "${LDAP_BASE_DN:-dc=nowhere,dc=com}"
     volumes:
       - _run_slapd:/run/slapd
 
@@ -39,9 +39,9 @@ services:
     depends_on:
       - ldap
     environment:
-      LAM_PASSWORD: "${LAM_PASSWORD:-foo}"
+      LAM_PASSWORD: *password
       LDAP_ADMIN_DN: "cn=admin,${LDAP_BASE_DN:-dc=nowhere,dc=com}"
-      LDAP_BASE_DN: "${LDAP_BASE_DN:-dc=nowhere,dc=com}"
+      LDAP_BASE_DN: *base_dn
     image: adarnimrod/ldap-account-manager
     ports:
       - 80:80
