Apache web authentication.
For services that I access only with a web browser, using Vouch is fine.
But different clients don't support it, so using basic authentication
backed by LDAP is a better option. So let's try to do that with Apache
with LDAP autheticaion and a similar setup using `auth_request` in
Nginx.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
     volumes:
       - /run/docker.sock:/run/docker.sock
 
+  httpd:
+    build:
+      context: httpd/
+    hostname: auth.shore.co.il
+    restart: always
+    volumes:
+      - _run_slapd:/run/slapd
+
   ldap:
     build:
       context: slapd/
