Restart the crond container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   crond:
     build:
       context: crond/
+    restart: always
     volumes:
       - /run/docker.sock:/run/docker.sock
 
