--- a/crond/Dockerfile
+++ b/crond/Dockerfile
@@ -1,8 +1,6 @@
-FROM docker:20.10 as docker
-
 # hadolint ignore=DL3006
 FROM registry.shore.co.il/cron as supersonic
-COPY --from=docker /usr/local/bin/docker /usr/local/bin/
-COPY --chown=root:root crontab /crontab
 # hadolint ignore=DL3002
 USER root
+# hadolint ignore=DL3018
+RUN apk add --update --no-cache docker-cli
