--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,15 @@ stages:
 
 build:
   extends: .compose-build
-  tags: [host01.shore.co.il]
+  tags: &tags [host01.shore.co.il]
   variables:
     DOCKER_BUILDKIT: ""
     COMPOSE_DOCKER_CLI_BUILD: ""
 
+pull:
+  extends: .compose-pull
+  tags: *tags
+
 run:
   extends: .compose-run
-  tags: [host01.shore.co.il]
+  tags: *tags
