--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: codespell
+        exclude: diff
 
   - repo: https://github.com/Yelp/detect-secrets.git
     rev: v1.1.0
